docs/api/qiskit/0.24/qiskit.circuit.library.MCPhaseGate.mdx
---
title: MCPhaseGate
description: API reference for qiskit.circuit.library.MCPhaseGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.MCPhaseGate
---

<span id="qiskit-circuit-library-mcphasegate" />

# qiskit.circuit.library.MCPhaseGate

<Class id="qiskit.circuit.library.MCPhaseGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/library/standard_gates/p.py" signature="MCPhaseGate(lam, num_ctrl_qubits, label=None)">
  Multi-controlled-Phase gate.

  This is a diagonal and symmetric gate that induces a phase on the state of the target qubit, depending on the state of the control qubits.

  **Circuit symbol:**

  ```python
      q_0: ───■────
              │
              .
              │
  q_(n-1): ───■────
           ┌──┴───┐
      q_n: ┤ P(λ) ├
           └──────┘
  ```

  <Admonition title="See also" type="note">
    `CPhaseGate`: The singly-controlled-version of this gate.
  </Admonition>

  Create new MCPhase gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.MCPhaseGate.__init__" name="__init__" signature="__init__(lam, num_ctrl_qubits, label=None)">
    Create new MCPhase gate.
  </Function>

  ## Methods

  |                                                                                                                                                         |                                                                          |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.library.MCPhaseGate.__init__ "qiskit.circuit.library.MCPhaseGate.__init__")(lam, num\_ctrl\_qubits\[, label])              | Create new MCPhase gate.                                                 |
  | [`add_decomposition`](#qiskit.circuit.library.MCPhaseGate.add_decomposition "qiskit.circuit.library.MCPhaseGate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.library.MCPhaseGate.assemble "qiskit.circuit.library.MCPhaseGate.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.library.MCPhaseGate.broadcast_arguments "qiskit.circuit.library.MCPhaseGate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.           |
  | [`c_if`](#qiskit.circuit.library.MCPhaseGate.c_if "qiskit.circuit.library.MCPhaseGate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`control`](#qiskit.circuit.library.MCPhaseGate.control "qiskit.circuit.library.MCPhaseGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Controlled version of this gate.                                         |
  | [`copy`](#qiskit.circuit.library.MCPhaseGate.copy "qiskit.circuit.library.MCPhaseGate.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.library.MCPhaseGate.inverse "qiskit.circuit.library.MCPhaseGate.inverse")()                                                 | Return inverted MCU1 gate ($MCU1(\lambda){\dagger} = MCU1(-\lambda)$)    |
  | [`is_parameterized`](#qiskit.circuit.library.MCPhaseGate.is_parameterized "qiskit.circuit.library.MCPhaseGate.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.library.MCPhaseGate.mirror "qiskit.circuit.library.MCPhaseGate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`power`](#qiskit.circuit.library.MCPhaseGate.power "qiskit.circuit.library.MCPhaseGate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                 |
  | [`qasm`](#qiskit.circuit.library.MCPhaseGate.qasm "qiskit.circuit.library.MCPhaseGate.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.library.MCPhaseGate.repeat "qiskit.circuit.library.MCPhaseGate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.library.MCPhaseGate.reverse_ops "qiskit.circuit.library.MCPhaseGate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`to_matrix`](#qiskit.circuit.library.MCPhaseGate.to_matrix "qiskit.circuit.library.MCPhaseGate.to_matrix")()                                           | Return a Numpy.array for the gate unitary matrix.                        |
  | [`validate_parameter`](#qiskit.circuit.library.MCPhaseGate.validate_parameter "qiskit.circuit.library.MCPhaseGate.validate_parameter")(parameter)       | Gate parameters should be int, float, or ParameterExpression             |

  ## Attributes

  |                                                                                                                               |                                                                               |
  | ----------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`ctrl_state`](#qiskit.circuit.library.MCPhaseGate.ctrl_state "qiskit.circuit.library.MCPhaseGate.ctrl_state")                | Return the control state of the gate as a decimal integer.                    |
  | [`decompositions`](#qiskit.circuit.library.MCPhaseGate.decompositions "qiskit.circuit.library.MCPhaseGate.decompositions")    | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.MCPhaseGate.definition "qiskit.circuit.library.MCPhaseGate.definition")                | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.MCPhaseGate.duration "qiskit.circuit.library.MCPhaseGate.duration")                      | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.MCPhaseGate.label "qiskit.circuit.library.MCPhaseGate.label")                               | Return gate label                                                             |
  | [`num_ctrl_qubits`](#qiskit.circuit.library.MCPhaseGate.num_ctrl_qubits "qiskit.circuit.library.MCPhaseGate.num_ctrl_qubits") | Get number of control qubits.                                                 |
  | [`params`](#qiskit.circuit.library.MCPhaseGate.params "qiskit.circuit.library.MCPhaseGate.params")                            | Get parameters from base\_gate.                                               |
  | [`unit`](#qiskit.circuit.library.MCPhaseGate.unit "qiskit.circuit.library.MCPhaseGate.unit")                                  | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.library.MCPhaseGate.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.MCPhaseGate.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.MCPhaseGate.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.MCPhaseGate.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.MCPhaseGate.control" name="control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.MCPhaseGate.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### ctrl\_state

  <Function id="qiskit.circuit.library.MCPhaseGate.ctrl_state" name="ctrl_state" signature="property ctrl_state">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.library.MCPhaseGate.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.library.MCPhaseGate.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Function>

  ### duration

  <Function id="qiskit.circuit.library.MCPhaseGate.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.MCPhaseGate.inverse" name="inverse" signature="inverse()">
    Return inverted MCU1 gate ($MCU1(\lambda){\dagger} = MCU1(-\lambda)$)
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.MCPhaseGate.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.circuit.library.MCPhaseGate.label" name="label" signature="property label">
    Return gate label

    **Return type**

    `str`
  </Function>

  ### mirror

  <Function id="qiskit.circuit.library.MCPhaseGate.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### num\_ctrl\_qubits

  <Function id="qiskit.circuit.library.MCPhaseGate.num_ctrl_qubits" name="num_ctrl_qubits" signature="property num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    int
  </Function>

  ### params

  <Function id="qiskit.circuit.library.MCPhaseGate.params" name="params" signature="property params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    list

    **Raises**

    **CircuitError** – Controlled gate does not define a base gate
  </Function>

  ### power

  <Function id="qiskit.circuit.library.MCPhaseGate.power" name="power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.MCPhaseGate.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.MCPhaseGate.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.MCPhaseGate.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.MCPhaseGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>

  ### unit

  <Function id="qiskit.circuit.library.MCPhaseGate.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.MCPhaseGate.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

